# homework10.1

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
src/: date_func.py  decorators.py  external_api.py  file_reader.py  generators.py  masks.py  processing.py  search_funcs.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_generators.py  test_masks.py  test_processing.py  test_search_funcs.py  test_utils.py  test_widget.py
