[tool.poetry]
name = "homework10-1"
version = "0.1.0"
description = ""
authors = ["Nataly Veldina <221fuchs@gmail.com>"]
readme = "README.md"
packages = [{include = "homework10"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
